# lumberjack

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  README.zh-CN.md  demo.py  pyproject.toml  ruff.toml  ty.toml
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docker/: Dockerfile  build-local.sh  build-multiarch.sh  docker-compose.yml
docs/: recursive-splitter-merges.md
docs/superpowers/plans/: 2026-06-18-html-parser-organization.md  2026-06-18-splitter-organization.md  2026-06-18-visitor-document-hooks.md  2026-06-18-visitor-pruning-and-accept.md  2026-06-18-visitor-structured-content.md  2026-06-23-render_heading.md  2026-06-30-parser-block-kinds.md  2026-06-30-token-counting-modes.md  2026-07-03-merge-ratio-and-flat-section-splitters.md  2026-07-03-section-subtree-merge.md
docs/superpowers/specs/: 2026-06-18-html-parser-organization-design.md  2026-06-18-splitter-organization-design.md  2026-06-18-visitor-document-hooks-design.md  2026-06-18-visitor-pruning-and-accept-design.md  2026-06-18-visitor-structured-content-design.md  2026-06-30-parser-block-kinds-design.md  2026-06-30-token-counting-modes-design.md  2026-07-03-merge-ratio-and-flat-section-splitters-design.md  2026-07-03-section-subtree-merge-design.md  2026-07-03-section-subtree-merge-option-design.md
lumberjack_webui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
lumberjack_webui/src/: App.module.css  App.tsx  index.css
lumberjack_webui/src/api/: pipeline.ts  split.ts
lumberjack_webui/src/components/: ChunkList.module.css  ChunkList.tsx  ChunkResult.module.css  ChunkResult.tsx  LanguageSwitcher.module.css  LanguageSwitcher.tsx  MarkdownInput.module.css  MarkdownInput.tsx  PipelineView.module.css  PipelineView.tsx  SplitOptions.module.css  SplitOptions.tsx  StepAST.module.css  StepAST.tsx  StepChunks.module.css  StepChunks.tsx  StepRawText.module.css  StepRawText.tsx  StepSplit.module.css  StepSplit.tsx  StepTokens.module.css  StepTokens.tsx
lumberjack_webui/src/i18n/: index.ts
lumberjack_webui/src/i18n/locales/: en.ts  zh.ts
lumberjack_webui/src/types/: chunk.ts  pipeline.ts
src/lumberjack/: __init__.py  api.py  block.py  cli.py  formats.py  lumber.py  main.py  models.py  protocols.py  tokenizer.py  utils.py
src/lumberjack/_internal/: __init__.py  block_splitter.py  formats.py  options.py  pipeline.py  rendering.py
src/lumberjack/base/: __init__.py  interfaces.py
src/lumberjack/core/: __init__.py  block.py  block_config.py  block_splitter.py  html_parser.py  marko_parser.py  models.py  options.py  parser.py  protocols.py  splitter.py  text_splitter.py  tokenizers.py  utils.py  visitor.py
src/lumberjack/core/docx/: parser.py
src/lumberjack/core/html/: parser.py  table_parser.py
src/lumberjack/core/markdown/: __init__.py  parser.py  splitter.py
src/lumberjack/core/markdown/plugins/: brackets_plugin.py
src/lumberjack/core/parser/: __init__.py
src/lumberjack/core/parser/docx/: __init__.py  parser.py
src/lumberjack/core/parser/html/: parser.py
src/lumberjack/core/parser/markdown/: parser.py
src/lumberjack/core/parsers/: __init__.py  factory.py
src/lumberjack/core/parsers/docx/: parser.py
src/lumberjack/core/parsers/html/: parser.py  table_parser.py
src/lumberjack/core/parsers/markdown/: parser.py
src/lumberjack/core/parsers/markdown/plugins/: brackets_plugin.py
src/lumberjack/core/plugins/: __init__.py  brackets_plugin.py
src/lumberjack/core/splitter/: __init__.py  base.py  context.py  exact.py  incremental.py  recursive.py  section.py  sibling.py  subtree.py
src/lumberjack/core/splitter/topology/: __init__.py  recursive.py  section.py  sibling.py  subtree.py
src/lumberjack/core/splitters/: __init__.py  base.py  drafts.py  exact.py  headings.py  incremental.py  recursive.py  registry.py  section.py  subtree.py
src/lumberjack/parser/: __init__.py  auto.py
src/lumberjack/parser/docx/: parser.py
src/lumberjack/parser/html/: parser.py
src/lumberjack/parser/markdown/: __init__.py  parser.py
src/lumberjack/splitter/: __init__.py  base.py  exact.py  incremental.py  section.py  sibling.py  subtree.py
src/lumberjack/splitter/topology/: section.py  sibling.py  subtree.py
src/lumberjack/web/: __main__.py  app.py  pipeline.py  routes.py
tests/: __init__.py  conftest.py  helpers.py  test_api.py  test_cli.py  test_docker.py  test_docx_parser.py  test_html_parser.py  test_html_table_integration.py  test_marko_parser.py  test_max_heading_level.py  test_parser.py  test_render_headings.py  test_splitter.py  test_token_counting_modes.py  test_utils.py  test_visitor.py  test_web.py
tests/_internal/: test_rendering.py
tests/contracts/: test_cli_contract.py  test_public_api_contract.py  test_web_contract.py
tests/fixtures/docx/: sample.docx
tests/fixtures/markdown/: commonmark-spec.md  deep-research-report.md  large_table.md  sample.md
tests/parser/docx/: test_docx_parser.py
tests/parser/html/: test_html_parser.py  test_table_integration.py
tests/parser/markdown/: test_markdown_parser.py
tests/splitter/: test_max_heading_level.py  test_splitter.py  test_token_counting_modes.py
tests/web/: test_web.py
