[project]
name = "lumberjack"
dynamic = ["version"]
description = "Structure-aware Markdown document splitter for RAG preprocessing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "tianleG" },
]
keywords = [
    "markdown",
    "splitter",
    "chunking",
    "rag",
    "document-processing",
    "text-splitting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "markdown-it-py[linkify,plugins]>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tokenizers = ["tiktoken>=0.9.0", "cachetools>=7.1.1"]
web = ["fastapi>=0.115.0", "uvicorn>=0.34.0", "python-multipart>=0.0.18"]
all = ["lumberjack[tokenizers,web]"]

[project.urls]
Homepage = "https://gitee.com/celery-flandre/lumberjack"
Repository = "https://gitee.com/celery-flandre/lumberjack"
Issues = "https://gitee.com/celery-flandre/lumberjack/issues"

[project.scripts]
lumber = "lumberjack.main:main"
lumberjack-serve = "lumberjack.web.__main__:main"

[dependency-groups]
dev = ["ruff>=0.15.6"]
scripts = [
    "datasets>=4.8.5",
]
test = ["pytest>=8.0.0", "httpx>=0.28.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/lumberjack"]

[tool.hatch.build.targets.sdist]
exclude = [
    "lumberjack_webui/",
    "script/",
    "assets/",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # use ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["lumberjack"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
