[project]
name = "lumberjack"
dynamic = ["version"]
description = "Structure-aware Markdown, HTML, and DOCX document splitter for RAG preprocessing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "tianleG" }]
keywords = [
    "markdown",
    "html",
    "docx",
    "splitter",
    "chunking",
    "rag",
    "document-processing",
    "text-splitting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = ["markdown-it-py[linkify,plugins]>=4.0.0", "pyyaml>=6.0"]

[project.optional-dependencies]
tokenizers = ["tiktoken>=0.9.0", "cachetools>=7.1.1"]
docx = ["python-docx>=1.1.0"]
web = ["fastapi>=0.115.0", "uvicorn>=0.34.0", "python-multipart>=0.0.18"]
all = ["lumberjack[tokenizers,docx,web]"]

[project.urls]
Homepage = "https://gitee.com/celery-flandre/lumberjack"
Repository = "https://gitee.com/celery-flandre/lumberjack"
Issues = "https://gitee.com/celery-flandre/lumberjack/issues"

[project.scripts]
lumber = "lumberjack.cli:main"
lumberjack-serve = "lumberjack.web.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "ty>=0.0.51",
]
test = ["pytest>=8.0.0", "httpx>=0.28.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/lumberjack"]

[tool.hatch.build.targets.sdist]
exclude = ["lumberjack_webui/", "script/", "assets/"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
